[package]
name = "ratatui-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
ratatui = "0.30.0-alpha.5"
ratatui-core = "0.1.0-alpha.6"
reqwest = { version = "0.12.22", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
